--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -23,6 +23,9 @@
                     <li><a href="{% url 'index' %}">Home</a></li>
                     <li><a href="{% url 'books' %}">All books</a></li>
                     <li><a href="{% url 'authors' %}">All authors</a></li>
+                </ul>
+
+                <ul class="sidebar-nav">
                     {% if user.is_authenticated %}
                     <li>User: {{ user.get_username }}</li>
                     <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
@@ -35,11 +38,21 @@
                     {% else %}
                     <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
                     {% endif %}
-                    {% if user.is_staff %}
+                </ul>
+                {% if user.is_staff %}
+                <hr>
+                <ul class="sidebar-nav">
                     <li>Staff</li>
-                    <li><a href="{% url 'borrowed' %}">All Borrowed</a></li>
+                    <li><a href="{% url 'all-borrowed' %}">All Borrowed</a></li>
+                    {% if perms.catalog.add_author %}
+                    <li><a href="{% url 'author-create' %}">Create author</a></li>
+                    {% endif %}
+                    <hr />
+                    {% if perms.catalog.add_book %}
+                    <li><a href="{% url 'book-create' %}">Create book</a></li>
                     {% endif %}
                 </ul>
+                {% endif %}
 
                 {% endblock %}
             </div>
